2003-05-07  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_split_long_move): Fix base register
	mode for XFmode splits for TARGET_64BIT.

2003-02-18  Jakub Jelinek  <jakub@redhat.com>

	* config/s390/s390.c (s390_simplify_dwarf_addr): Simplify
	unspec 101.

2003-01-17  Jakub Jelinek  <jakub@redhat.com>

	* config/s390/linux.h (LINK_ARCH64_SPEC): Change 64-bit dynamic
	linker to /lib64/ld64.so.1.

2003-02-04  Jakub Jelinek  <jakub@redhat.com>

	PR optimization/8555
	* config/i386/i386.md (sse_mov?fcc split): Handle op2 == op3 case
	instead of aborting.

2002-12-25  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (rs6000_override_options): Convert to
	tartet_flags_explicit.
	* config/rs6000/rs6000.h (MASK_MULTIPLE_SET, MASK_STRING_SET): Delete.
	Compact target_flags bits.
	(TARGET_MULTIPLE_SET, TARGET_STRING_SET): Delete.
	(TARGET_SWITCHES): Delete references to *_SET flags.

2003-03-22  Alan Modra  <amodra@bigpond.net.au>

	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.

2003-03-18  Jakub Jelinek  <jakub@redhat.com>

	* config/s390/s390.c (s390_output_dwarf_dtprel): New.
	* config/s390/s390-protos.h (s390_output_dwarf_dtprel): New proto.
	* config/s390/s390.h (ASM_OUTPUT_DWARF_DTPREL): Define.

	* config/ia64/ia64.c (ia64_output_dwarf_dtprel): New.
	* config/ia64/ia64-protos.h (ia64_output_dwarf_dtprel): New proto.
	* config/ia64/ia64.h (ASM_OUTPUT_DWARF_DTPREL): Define.

2003-05-16  Jakub Jelinek  <jakub@redhat.com>

	* config/ia64/unwind-ia64.c (uw_update_reg_address): Handle
	.save XX, r0.

2001-10-31  Jakub Jelinek  <jakub@redhat.com>

	* unwind-dw2-fde.c (fde_merge): Choose just one from FDEs for the
	same function in erratic array.

2002-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR debug/7241
	* dwarf2out.c (base_type_die): Use DW_ATE_*_char even if main
	variant is char_type_node and type name is char.

2003-02-04  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (dwarf2out_finish): Add AT_comp_dir