@@ -1,3 +1,9 @@
+2003-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (x86_64_sign_extended_value): Don't allow
+	tls_symbolic_operand.
+	(x86_64_zero_extended_value): Likewise.
+
 2003-05-07  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (ix86_split_long_move): Fix base register
